--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,9 @@ services:
     volumes:
       - ./code:/code
       - ./conf:/etc/nginx/conf.d
+    links:
+      - php
+  php:
+    image: php:7-fpm
+    volumes:
+      - ./code:/code
