--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,18 @@ services:
       - ./conf:/etc/nginx/conf.d
     links:
       - php
+      - db
+    depends_on:
+      - db
   php:
-    image: php:7-fpm
+    build: .
     volumes:
       - ./code:/code
       - ./vendor:/vendor
       - ./.env:/.env
+  db:
+    image: mysql:latest
+    ports:
+      - "6603:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: helloworld
